Finalização do projeto final

--- a/Final_project/index.html
+++ b/Final_project/index.html
@@ -37,15 +37,14 @@
         <h1>Douglas Luiz</h1>
         <h2>Full-Stack Developer</h2>
         <div class="social-media">
-            <a href="#">Linkedin</a>
-            <a href="#">Github</a>
+            <a href="https://www.linkedin.com/in/douglas-luiz-1731b212a/">Linkedin</a>
+            <a href="https://github.com/Douglas-Dorug">Github</a>
         </div>
     </header>
-    <main class="container">
+    <div class="container">
         <div class="card-container">
             <div class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sed omnis dicta pariatur amet unde eius cum nulla fugit, autem, quis voluptas error voluptatum dolore! Tempora dignissimos dicta nemo exercitationem.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis blanditiis hic rem quam, fuga adipisci sit dolor quod accusantium vitae ut, alias recusandae similique tenetur, praesentium possimus quos aliquid rerum!
+                Aqui em meu Github estão disponibilizados meus projetos e seu codigo fonte.
             </div>
             <div class="card">
                 <div class="card-wrapper">
@@ -54,6 +53,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
@@ -62,10 +62,12 @@
                 </div>
             </div>
             <div class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sed omnis dicta pariatur amet unde eius cum nulla fugit, autem, quis voluptas error voluptatum dolore! Tempora dignissimos dicta nemo exercitationem.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis blanditiis hic rem quam, fuga adipisci sit dolor quod accusantium vitae ut, alias recusandae similique tenetur, praesentium possimus quos aliquid rerum!
+                Aqui em meu Linkedin você pode acompanhar alguns dos principais eventos que realizei em minha carreira.
             </div>
         </div>
-    </main>
+    </div>
+    <footer class="footer">
+        Feito por Douglas Luiz
+    </footer>
 </body>
 </html>
